chore: update files

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,25 +1,24 @@
 /* -----------------------------------------------------
  * Import Pywal colors 
  * ----------------------------------------------------- */
-@import '../../.cache/wal/colors-waybar.css';
+@import "../../.cache/wal/colors-waybar.css";
 
 /* -----------------------------------------------------
  * General 
  * ----------------------------------------------------- */
 
 * {
-    font-family: "Fira Sans Semibold", FontAwesome, Roboto, Helvetica, Arial, sans-serif;
-    border: none;
-    border-radius: 0px;
+  font-family: "Fira Sans Semibold", FontAwesome, Roboto, Helvetica, Arial,
+    sans-serif;
+  border: none;
+  border-radius: 0px;
 }
 
 window#waybar {
-    background-color: rgba(0,0,0,0.8);
-    border-bottom: 0px solid #ffffff;
-    /* color: #FFFFFF; */
-    background: transparent;
-    transition-property: background-color;
-    transition-duration: .5s;
+  border-bottom: 0px solid #ffffff;
+  background: transparent;
+  transition-property: background-color;
+  transition-duration: 0.5s;
 }
 
 /* -----------------------------------------------------
@@ -27,43 +26,42 @@ window#waybar {
  * ----------------------------------------------------- */
 
 #workspaces {
-    background: #FFFFFF;
-    margin: 2px 1px 3px 1px;
-    padding: 0px 1px;
-    border-radius: 15px;
-    border:0px;
-    font-weight: bold;
-    font-style: normal;
-    opacity:0.8;
-    font-size:16px;
-    color:#FFFFFF;
+  background: @color11;
+  margin: 2px 1px 3px 1px;
+  padding: 0px 1px;
+  border-radius: 15px;
+  border: 0px;
+  font-weight: bold;
+  font-style: normal;
+  opacity: 0.8;
+  font-size: 16px;
+  border: none;
 }
 
 #workspaces button {
-    padding: 1px 9px;
-    margin: 3px 3px;
-    border-radius: 15px;
-    border:0px;
-    color: #FFFFFF;
-    background-color: @color11;
-    transition: all 0.3s ease-in-out;
-    opacity:0.4;
+  padding: 1px 9px;
+  margin: 1px;
+  border-radius: 14px;
+  border: 0px;
+  color: @foreground;
+  background-color: transparent;
+  transition: all 0.5s ease-in-out;
+  opacity: 0.4;
 }
 
 #workspaces button.active {
-    color: #FFFFFF;
-    background: @color11;
-    border-radius: 15px;
-    min-width: 40px;
-    transition: all 0.3s ease-in-out;
-    opacity:1.0;
+  color: #ffffff;
+  background: transparent;
+  border-radius: 14px;
+  transition: all 0.5s ease-in-out;
+  opacity: 1;
 }
 
 #workspaces button:hover {
-    color: #FFFFFF;
-    background: @color11;
-    border-radius: 15px;
-    opacity:0.7;
+  color: #ffffff;
+  background: transparent;
+  border-radius: 15px;
+  opacity: 0.7;
 }
 
 /* -----------------------------------------------------
@@ -71,15 +69,15 @@ window#waybar {
  * ----------------------------------------------------- */
 
 tooltip {
-    border-radius: 10px;
-    background-color: #FFFFFF;
-    opacity:0.8;
-    padding:20px;
-    margin:0px;
+  border-radius: 10px;
+  background-color: #ffffff;
+  opacity: 0.8;
+  padding: 20px;
+  margin: 0px;
 }
 
 tooltip label {
-    color: @color11;
+  color: @color11;
 }
 
 /* -----------------------------------------------------
@@ -87,18 +85,18 @@ tooltip label {
  * ----------------------------------------------------- */
 
 #window {
-    background: #FFFFFF;
-    margin: 5px 15px 5px 0px;
-    padding: 2px 10px 0px 10px;
-    border-radius: 12px;
-    color:@background;
-    font-size:16px;
-    font-weight:normal;
-    opacity:0.8;
+  background: transparent;
+  margin: 5px 15px 5px 0px;
+  padding: 2px 10px 0px 10px;
+  border-radius: 12px;
+  color: @foreground;
+  font-size: 16px;
+  font-weight: normal;
+  opacity: 0.8;
 }
 
 window#waybar.empty #window {
-    background-color:transparent;
+  background-color: transparent;
 }
 
 /* -----------------------------------------------------
@@ -106,21 +104,27 @@ window#waybar.empty #window {
  * ----------------------------------------------------- */
 
 #taskbar {
-    /* background: @color11; */
-    background: #FFFFFF;
-    margin: 3px 15px 3px 0px;
-    padding:0px;
-    /*padding: 2px 3px 1px 3px;*/
-    border-radius: 15px;
-    font-weight: normal;
-    font-style: normal;
-    opacity:0.8;
-    border: 3px solid #FFFFFF;
+  /* background: @color11; */
+  background: transparent;
+  margin: 3px 10px 3px 0;
+  padding: 0;
+  border-radius: 15px;
+  font-weight: normal;
+  font-style: normal;
+  border: none;
 }
 
 #taskbar button {
-    margin:0;
-    padding: 0px 5px 0px 5px;
+  margin: 0 8px;
+  padding: 0;
+}
+
+#taskbar button:first-child {
+  margin-left: 0;
+}
+
+#taskbar button:last-child {
+  margin-right: 0;
 }
 
 /* -----------------------------------------------------
@@ -128,27 +132,34 @@ window#waybar.empty #window {
  * ----------------------------------------------------- */
 
 .modules-left > widget:first-child > #workspaces {
-    margin-left: 0;
+  margin-left: 0;
 }
 
 .modules-right > widget:last-child > #workspaces {
-    margin-right: 0;
+  margin-right: 0;
 }
 
 /* -----------------------------------------------------
  * Custom Quicklinks
  * ----------------------------------------------------- */
 
-#custom-brave, #custom-outlook, #custom-filemanager, #custom-teams, #custom-chatgpt, #custom-calculator, #custom-windowsvm, #custom-cliphist, #custom-wallpaper {
-    margin-right:20px;
-    font-size:20px;
-    font-weight:bold;
-    opacity:0.8;
-    color:#FFFFFF;
+#custom-brave,
+#custom-outlook,
+#custom-filemanager,
+#custom-teams,
+#custom-chatgpt,
+#custom-calculator,
+#custom-windowsvm,
+#custom-cliphist,
+#custom-wallpaper {
+  margin-right: 20px;
+  font-size: 20px;
+  font-weight: bold;
+  color: @foreground;
 }
 
 #custom-wallpaper {
-    margin-right:23px;
+  margin-right: 23px;
 }
 
 /* -----------------------------------------------------
@@ -156,14 +167,14 @@ window#waybar.empty #window {
  * ----------------------------------------------------- */
 
 #custom-appmenu {
-    background-color: @color11;
-    font-size: 16px;
-    color: #FFFFFF;
-    border-radius: 15px;
-    padding: 0px 10px 0px 10px;
-    margin: 3px 15px 3px 14px;
-    opacity:0.8;
-    border:3px solid #FFFFFF;
+  background-color: transparent;
+  font-size: 16px;
+  color: #ffffff;
+  border-radius: 15px;
+  padding: 0px 10px 0px 10px;
+  margin: 3px 15px 3px 14px;
+  opacity: 0.8;
+  border: 1px solid #ffffff;
 }
 
 /* -----------------------------------------------------
@@ -171,67 +182,27 @@ window#waybar.empty #window {
  * ----------------------------------------------------- */
 
 #custom-exit {
-    margin: 0px 15px 0px 0px;
-    padding:0px;
-    font-size:20px;
-    color:#FFFFFF;
-}
-
-/* -----------------------------------------------------
- * Custom Updates
- * ----------------------------------------------------- */
-
-#custom-updates {
-    background-color: #FFFFFF;
-    font-size: 16px;
-    color: @background;
-    border-radius: 15px;
-    padding: 2px 10px 0px 10px;
-    margin: 5px 15px 5px 0px;
-    opacity:0.8;
-}
-
-#custom-updates.green {
-    background-color: #FFFFFF;
-}
-
-#custom-updates.yellow {
-    background-color: #ff9a3c;
-    color: #ffffff;
-}
-
-#custom-updates.red {
-    background-color: #dc2f2f;
-    color: #ffffff;
-}
-
-/* -----------------------------------------------------
- * Custom Youtube
- * ----------------------------------------------------- */
-
-#custom-youtube {
-    background-color: #FFFFFF;
-    font-size: 16px;
-    color: @background;
-    border-radius: 15px;
-    padding: 2px 10px 0px 10px;
-    margin: 5px 15px 5px 0px;
-    opacity:0.8;
+  margin: 0px 15px 0px 0px;
+  padding: 0px;
+  font-size: 20px;
+  color: #ffffff;
 }
 
 /* -----------------------------------------------------
  * Hardware Group
  * ----------------------------------------------------- */
 
-#disk,#memory,#cpu {
-    margin:0px;
-    padding:0px;
-    font-size:16px;
-    color:#FFFFFF;
+#disk,
+#memory,
+#cpu {
+  margin: 0px;
+  padding: 0px;
+  font-size: 16px;
+  color: #ffffff;
 }
 
 #memory {
-    margin-right:10px;
+  margin-right: 10px;
 }
 
 /* -----------------------------------------------------
@@ -239,14 +210,12 @@ window#waybar.empty #window {
  * ----------------------------------------------------- */
 
 #clock {
-    background-color: @color11;
-    font-size: 16px;
-    color: #FFFFFF;
-    border-radius: 15px;
-    padding: 1px 10px 0px 10px;
-    margin: 3px 15px 3px 0px;
-    opacity:0.8;
-    border:3px solid #FFFFFF;   
+  font-size: 16px;
+  color: #ffffff;
+  border-radius: 15px;
+  padding: 1px 10px 0px 10px;
+  margin: 3px 15px 3px 0px;
+  border: 1px solid #ffffff;
 }
 
 /* -----------------------------------------------------
@@ -254,18 +223,18 @@ window#waybar.empty #window {
  * ----------------------------------------------------- */
 
 #pulseaudio {
-    background-color: #FFFFFF;
-    font-size: 16px;
-    color: @background;
-    border-radius: 15px;
-    padding: 2px 10px 0px 10px;
-    margin: 5px 15px 5px 0px;
-    opacity:0.8;
+  background-color: #ffffff;
+  font-size: 16px;
+  color: @background;
+  border-radius: 15px;
+  padding: 2px 10px 0px 10px;
+  margin: 5px 15px 5px 0px;
+  opacity: 0.8;
 }
 
 #pulseaudio.muted {
-    background-color: @color11;
-    color: #FFFFFF;
+  background-color: @color11;
+  color: #ffffff;
 }
 
 /* -----------------------------------------------------
@@ -273,44 +242,45 @@ window#waybar.empty #window {
  * ----------------------------------------------------- */
 
 #network {
-    background-color: #FFFFFF;
-    font-size: 16px;
-    color: @background;
-    border-radius: 15px;
-    padding: 2px 10px 0px 10px;
-    margin: 3px 10px 3px 0px;
-    opacity:0.8;
-    border: 3px solid #FFFFFF
+  background: transparent;
+  font-size: 16px;
+  color: @background;
+  border-radius: 15px;
+  padding: 2px 10px 0px 10px;
+  margin: 3px 10px 3px 0px;
+  border: 1px solid #ffffff;
 }
 
 #network.ethernet {
-    background-color: @color11;
-    color:#FFFFFF;
+  background-color: transparent;
+  color: #ffffff;
 }
 
 #network.wifi {
-    background-color: @color11;
-    color:#FFFFFF;
+  background-color: transparent;
+  color: #ffffff;
 }
 
 /* -----------------------------------------------------
  * Bluetooth
  * ----------------------------------------------------- */
 
-#bluetooth.on, #bluetooth.connected {
-    background-color: #FFFFFF;
-    font-size: 16px;
-    color: @background;
-    border-radius: 15px;
-    padding: 2px 10px 0px 10px;
-    margin: 5px 15px 5px 0px;
-    opacity:0.8;
+#bluetooth.on,
+#bluetooth.connected {
+  background-color: transparent;
+  font-size: 16px;
+  color: #ffffff;
+  border-radius: 15px;
+  border: 1px solid #ffffff;
+  padding: 2px 10px 0px 10px;
+  margin: 5px 15px 5px 0px;
+  opacity: 0.8;
 }
 
 #bluetooth.off {
-    background-color: transparent;
-    padding: 0px;
-    margin: 0px;
+  background-color: transparent;
+  padding: 0px;
+  margin: 0px;
 }
 
 /* -----------------------------------------------------
@@ -318,35 +288,37 @@ window#waybar.empty #window {
  * ----------------------------------------------------- */
 
 #battery {
-    background-color: #FFFFFF;
-    font-size: 16px;
-    color: @background;
-    border-radius: 15px;
-    padding: 2px 15px 0px 10px;
-    margin: 5px 15px 5px 0px;
-    opacity:0.8;
+  background-color: transparent;
+  font-size: 16px;
+  color: #ffffff;
+  border-radius: 15px;
+  border: 1px solid #ffffff;
+  padding: 2px 15px 0px 10px;
+  margin: 5px 15px 5px 0px;
+  opacity: 0.8;
 }
 
-#battery.charging, #battery.plugged {
-    color: #ffffff;
-    background-color: @color11;
+#battery.charging,
+#battery.plugged {
+  color: #ffffff;
+  background-color: @color11;
 }
 
 @keyframes blink {
-    to {
-        background-color: #ffffff;
-        color: #000000;
-    }
+  to {
+    background-color: #ffffff;
+    color: #000000;
+  }
 }
 
 #battery.critical:not(.charging) {
-    background-color: #f53c3c;
-    color: #ffffff;
-    animation-name: blink;
-    animation-duration: 0.5s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
+  background-color: #f53c3c;
+  color: #ffffff;
+  animation-name: blink;
+  animation-duration: 0.5s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
 }
 
 /* -----------------------------------------------------
@@ -354,16 +326,16 @@ window#waybar.empty #window {
  * ----------------------------------------------------- */
 
 #tray {
-    background-color: #2980b9;
+  background-color: #2980b9;
 }
 
 #tray > .passive {
-    -gtk-icon-effect: dim;
+  -gtk-icon-effect: dim;
 }
 
 #tray > .needs-attention {
-    -gtk-icon-effect: highlight;
-    background-color: #eb4d4b;
+  -gtk-icon-effect: highlight;
+  background-color: #eb4d4b;
 }
 
 /* -----------------------------------------------------
@@ -371,18 +343,17 @@ window#waybar.empty #window {
  * ----------------------------------------------------- */
 
 label:focus {
-    background-color: #000000;
+  background-color: #000000;
 }
 
 #backlight {
-    background-color: #90b1b1;
+  background-color: #90b1b1;
 }
 
 #network {
-    background-color: #2980b9;
+  background-color: #2980b9;
 }
 
 #network.disconnected {
-    background-color: #f53c3c;
+  background-color: #f53c3c;
 }
-
