--- a/waybar/style.css
+++ b/waybar/style.css
@@ -293,7 +293,7 @@ window#waybar.empty #window {
   color: #ffffff;
   border-radius: 15px;
   border: 1px solid #ffffff;
-  padding: 2px 15px 0px 10px;
+  padding: 2px 10px;
   margin: 5px 15px 5px 0px;
   opacity: 0.8;
 }
