--- a/waybar/style.css
+++ b/waybar/style.css
@@ -11,12 +11,12 @@
   font-family: "Fira Sans Semibold", FontAwesome, Roboto, Helvetica, Arial,
     sans-serif;
   border: none;
-  border-radius: 0px;
+  border-radius: 0;
 }
 
 window#waybar {
-  border-bottom: 0px solid #ffffff;
-  background: transparent;
+  border-bottom: 0;
+  background: @background;
   transition-property: background-color;
   transition-duration: 0.5s;
 }
@@ -27,10 +27,10 @@ window#waybar {
 
 #workspaces {
   background: @color11;
-  margin: 2px 1px 3px 1px;
-  padding: 0px 1px;
+  margin: 0;
+  padding: 0 1px;
   border-radius: 15px;
-  border: 0px;
+  border: 0;
   font-weight: bold;
   font-style: normal;
   opacity: 0.8;
@@ -40,9 +40,9 @@ window#waybar {
 
 #workspaces button {
   padding: 1px 9px;
-  margin: 1px;
+  margin: 0;
   border-radius: 14px;
-  border: 0px;
+  border: 0;
   color: @foreground;
   background-color: transparent;
   transition: all 0.5s ease-in-out;
@@ -73,7 +73,7 @@ tooltip {
   background-color: #ffffff;
   opacity: 0.8;
   padding: 20px;
-  margin: 0px;
+  margin: 0;
 }
 
 tooltip label {
@@ -86,8 +86,8 @@ tooltip label {
 
 #window {
   background: transparent;
-  margin: 5px 15px 5px 0px;
-  padding: 2px 10px 0px 10px;
+  margin: 0 15px 0;
+  padding: 2px 10px 0 10px;
   border-radius: 12px;
   color: @foreground;
   font-size: 16px;
@@ -106,7 +106,7 @@ window#waybar.empty #window {
 #taskbar {
   /* background: @color11; */
   background: transparent;
-  margin: 3px 10px 3px 0;
+  margin: 0 10px 0 0;
   padding: 0;
   border-radius: 15px;
   font-weight: normal;
@@ -171,8 +171,8 @@ window#waybar.empty #window {
   font-size: 16px;
   color: #ffffff;
   border-radius: 15px;
-  padding: 0px 10px 0px 10px;
-  margin: 3px 15px 3px 14px;
+  padding: 0 10px;
+  margin: 0 15px;
   opacity: 0.8;
   border: 1px solid #ffffff;
 }
@@ -182,8 +182,8 @@ window#waybar.empty #window {
  * ----------------------------------------------------- */
 
 #custom-exit {
-  margin: 0px 15px 0px 0px;
-  padding: 0px;
+  margin: 0 15px 0 0;
+  padding: 0;
   font-size: 20px;
   color: #ffffff;
 }
@@ -195,8 +195,8 @@ window#waybar.empty #window {
 #disk,
 #memory,
 #cpu {
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   font-size: 16px;
   color: #ffffff;
 }
@@ -213,8 +213,8 @@ window#waybar.empty #window {
   font-size: 16px;
   color: #ffffff;
   border-radius: 15px;
-  padding: 1px 10px 0px 10px;
-  margin: 3px 15px 3px 0px;
+  padding: 1px 10px 0 10px;
+  margin: 0 15px 0 0;
   border: 1px solid #ffffff;
 }
 
@@ -227,8 +227,8 @@ window#waybar.empty #window {
   font-size: 16px;
   color: @background;
   border-radius: 15px;
-  padding: 2px 10px 0px 10px;
-  margin: 5px 15px 5px 0px;
+  padding: 2px 10px 0 10px;
+  margin: 0 15px 0 0;
   opacity: 0.8;
 }
 
@@ -246,8 +246,8 @@ window#waybar.empty #window {
   font-size: 16px;
   color: @background;
   border-radius: 15px;
-  padding: 2px 10px 0px 10px;
-  margin: 3px 10px 3px 0px;
+  padding: 2px 10px 0 10px;
+  margin: 0 10px 0 0;
   border: 1px solid #ffffff;
 }
 
@@ -272,15 +272,15 @@ window#waybar.empty #window {
   color: #ffffff;
   border-radius: 15px;
   border: 1px solid #ffffff;
-  padding: 2px 10px 0px 10px;
-  margin: 5px 15px 5px 0px;
+  padding: 2px 10px 0 10px;
+  margin: 0 15px 0 0;
   opacity: 0.8;
 }
 
 #bluetooth.off {
   background-color: transparent;
-  padding: 0px;
-  margin: 0px;
+  padding: 0;
+  margin: 0;
 }
 
 /* -----------------------------------------------------
@@ -294,7 +294,7 @@ window#waybar.empty #window {
   border-radius: 15px;
   border: 1px solid #ffffff;
   padding: 2px 10px;
-  margin: 5px 15px 5px 0px;
+  margin: 0 15px 0 0;
   opacity: 0.8;
 }
 
