--- a/waybar/style.css
+++ b/waybar/style.css
@@ -8,14 +8,13 @@
  * ----------------------------------------------------- */
 
 * {
-  font-family: "Fira Sans Semibold", FontAwesome, Roboto, Helvetica, Arial,
-    sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
   border: none;
   border-radius: 0;
 }
 
 window#waybar {
-  border-bottom: 0;
+  border: none;
   background: @background;
   transition-property: background-color;
   transition-duration: 0.5s;
@@ -26,41 +25,26 @@ window#waybar {
  * ----------------------------------------------------- */
 
 #workspaces {
-  background: @color11;
-  margin: 0;
-  padding: 0 1px;
-  border-radius: 15px;
-  border: 0;
-  font-weight: bold;
-  font-style: normal;
-  opacity: 0.8;
-  font-size: 16px;
+  background: transparent;
   border: none;
+  margin: 0;
+  padding: 0;
 }
 
 #workspaces button {
-  padding: 1px 9px;
-  margin: 0;
-  border-radius: 14px;
-  border: 0;
-  color: @foreground;
   background-color: transparent;
   transition: all 0.5s ease-in-out;
-  opacity: 0.4;
+  opacity: 0.3;
 }
 
 #workspaces button.active {
-  color: #ffffff;
-  background: transparent;
-  border-radius: 14px;
+  background-color: transparent;
   transition: all 0.5s ease-in-out;
   opacity: 1;
+  min-width: 30px;
 }
 
 #workspaces button:hover {
-  color: #ffffff;
-  background: transparent;
-  border-radius: 15px;
   opacity: 0.7;
 }
 
@@ -70,14 +54,13 @@ window#waybar {
 
 tooltip {
   border-radius: 10px;
-  background-color: #ffffff;
-  opacity: 0.8;
+  background-color: @background;
   padding: 20px;
   margin: 0;
 }
 
 tooltip label {
-  color: @color11;
+  color: @foreground;
 }
 
 /* -----------------------------------------------------
@@ -85,7 +68,7 @@ tooltip label {
  * ----------------------------------------------------- */
 
 #window {
-  background: transparent;
+  background-color: transparent;
   margin: 0 15px 0;
   padding: 2px 10px 0 10px;
   border-radius: 12px;
@@ -100,37 +83,8 @@ window#waybar.empty #window {
 }
 
 /* -----------------------------------------------------
- * Taskbar
- * ----------------------------------------------------- */
-
-#taskbar {
-  /* background: @color11; */
-  background: transparent;
-  margin: 0 10px 0 0;
-  padding: 0;
-  border-radius: 15px;
-  font-weight: normal;
-  font-style: normal;
-  border: none;
-}
-
-#taskbar button {
-  margin: 0 8px;
-  padding: 0;
-}
-
-#taskbar button:first-child {
-  margin-left: 0;
-}
-
-#taskbar button:last-child {
-  margin-right: 0;
-}
-
-/* -----------------------------------------------------
  * Modules
  * ----------------------------------------------------- */
-
 .modules-left > widget:first-child > #workspaces {
   margin-left: 0;
 }
@@ -143,93 +97,51 @@ window#waybar.empty #window {
  * Custom Quicklinks
  * ----------------------------------------------------- */
 
-#custom-brave,
-#custom-outlook,
-#custom-filemanager,
-#custom-teams,
 #custom-chatgpt,
-#custom-calculator,
-#custom-windowsvm,
-#custom-cliphist,
-#custom-wallpaper {
-  margin-right: 20px;
-  font-size: 20px;
-  font-weight: bold;
-  color: @foreground;
-}
-
-#custom-wallpaper {
-  margin-right: 23px;
-}
-
-/* -----------------------------------------------------
- * Custom Modules
- * ----------------------------------------------------- */
-
-#custom-appmenu {
-  background-color: transparent;
-  font-size: 16px;
+#custom-cliphist {
+  min-width: 24px;
   color: #ffffff;
-  border-radius: 15px;
-  padding: 0 10px;
-  margin: 0 15px;
-  opacity: 0.8;
-  border: 1px solid #ffffff;
 }
 
 /* -----------------------------------------------------
  * Custom Exit
  * ----------------------------------------------------- */
-
 #custom-exit {
-  margin: 0 15px 0 0;
-  padding: 0;
-  font-size: 20px;
+  min-width: 24px;
   color: #ffffff;
 }
 
 /* -----------------------------------------------------
  * Hardware Group
  * ----------------------------------------------------- */
-
-#disk,
 #memory,
 #cpu {
-  margin: 0;
-  padding: 0;
   font-size: 16px;
+  font-weight: normal;
   color: #ffffff;
-}
-
-#memory {
-  margin-right: 10px;
 }
 
 /* -----------------------------------------------------
  * Clock
  * ----------------------------------------------------- */
-
 #clock {
   font-size: 16px;
   color: #ffffff;
+  font-weight: normal;
   border-radius: 15px;
-  padding: 1px 10px 0 10px;
-  margin: 0 15px 0 0;
-  border: 1px solid #ffffff;
+  transition: background-color 0.5s ease;
 }
 
 /* -----------------------------------------------------
  * Pulseaudio
  * ----------------------------------------------------- */
-
 #pulseaudio {
   background-color: #ffffff;
   font-size: 16px;
   color: @background;
   border-radius: 15px;
-  padding: 2px 10px 0 10px;
-  margin: 0 15px 0 0;
   opacity: 0.8;
+  min-width: 24px;
 }
 
 #pulseaudio.muted {
@@ -240,15 +152,10 @@ window#waybar.empty #window {
 /* -----------------------------------------------------
  * Network
  * ----------------------------------------------------- */
-
 #network {
-  background: transparent;
-  font-size: 16px;
-  color: @background;
-  border-radius: 15px;
-  padding: 2px 10px 0 10px;
-  margin: 0 10px 0 0;
-  border: 1px solid #ffffff;
+  background-color: transparent;
+  color: #ffffff;
+  min-width: 24px;
 }
 
 #network.ethernet {
@@ -264,17 +171,13 @@ window#waybar.empty #window {
 /* -----------------------------------------------------
  * Bluetooth
  * ----------------------------------------------------- */
-
 #bluetooth.on,
 #bluetooth.connected {
   background-color: transparent;
   font-size: 16px;
   color: #ffffff;
   border-radius: 15px;
-  border: 1px solid #ffffff;
-  padding: 2px 10px 0 10px;
-  margin: 0 15px 0 0;
-  opacity: 0.8;
+  min-width: 24px;
 }
 
 #bluetooth.off {
@@ -286,22 +189,18 @@ window#waybar.empty #window {
 /* -----------------------------------------------------
  * Battery
  * ----------------------------------------------------- */
-
 #battery {
   background-color: transparent;
   font-size: 16px;
   color: #ffffff;
-  border-radius: 15px;
-  border: 1px solid #ffffff;
-  padding: 2px 10px;
-  margin: 0 15px 0 0;
   opacity: 0.8;
+  min-width: 24px;
 }
 
 #battery.charging,
 #battery.plugged {
   color: #ffffff;
-  background-color: @color11;
+  background-color: transparent;
 }
 
 @keyframes blink {
@@ -324,7 +223,6 @@ window#waybar.empty #window {
 /* -----------------------------------------------------
  * Tray
  * ----------------------------------------------------- */
-
 #tray {
   background-color: #2980b9;
 }
@@ -341,7 +239,6 @@ window#waybar.empty #window {
 /* -----------------------------------------------------
  * Other
  * ----------------------------------------------------- */
-
 label:focus {
   background-color: #000000;
 }
