--- a/waybar/style.css
+++ b/waybar/style.css
@@ -54,10 +54,11 @@ window#waybar {
 #workspaces button.active {
   opacity: 1;
   min-width: 30px;
+  color: #ffffff;
 }
 
 #workspaces button:hover {
-  opacity: 0.7;
+  opacity: 1;
 }
 
 /* -----------------------------------------------------
