--- a/waybar/style.css
+++ b/waybar/style.css
@@ -50,6 +50,10 @@ window#waybar {
 
 #workspaces button:hover {
   opacity: 1;
+  box-shadow: inherit;
+  text-shadow: inherit;
+  background: none;
+  border: none;
 }
 
 /* -----------------------------------------------------
@@ -221,4 +225,14 @@ label:focus {
 
 #network.disconnected {
   background-color: #f53c3c;
+}
+
+/* -----------------------------------------------------
+ * Keyboard Layout
+ * ----------------------------------------------------- */
+
+#language {
+  min-width: 24px;
+  color: #ffffff;
+  margin-right: 5px;
 }
