--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -11,7 +11,8 @@
     -apple-system;
   border: none;
   border-radius: 0;
-  font-weight: 600;
+  font-size: 16px;
+  font-weight: 400;
 }
 
 window#waybar {
@@ -79,7 +80,6 @@ tooltip label {
   background-color: transparent;
   margin: 0 15px 0;
   padding: 2px 10px 0 10px;
-  border-radius: 12px;
   color: #ffffff;
   font-size: 16px;
   font-weight: normal;
@@ -124,19 +124,19 @@ window#waybar.empty #window {
  * ----------------------------------------------------- */
 #memory,
 #cpu {
-  font-size: 16px;
+  font-size: 14px;
   font-weight: normal;
   color: #ffffff;
+  min-width: 24px;
 }
 
 /* -----------------------------------------------------
  * Clock
  * ----------------------------------------------------- */
 #clock {
-  font-size: 16px;
+  font-size: 14px;
   color: #ffffff;
   font-weight: normal;
-  border-radius: 15px;
   transition: background-color 0.5s ease;
   margin-right: 15px;
 }
@@ -234,5 +234,11 @@ label:focus {
 #language {
   min-width: 24px;
   color: #ffffff;
-  margin-right: 5px;
+  margin-right: 4px;
+  font-size: 14px;
+  font-weight: 600;
 }
+
+/* -----------------------------------------------------
+ * Custom
+ * ----------------------------------------------------- */
