feat(waybar): add disk to waybar

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -128,7 +128,8 @@ window#waybar.empty #window {
  * Hardware Group
  * ----------------------------------------------------- */
 #memory,
-#cpu {
+#cpu,
+#disk {
   font-size: 14px;
   font-weight: normal;
   color: #ffffff;
