--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -122,6 +122,7 @@ window#waybar.empty #window {
   color: #ffffff;
   font-weight: normal;
   transition: background-color 0.5s ease;
+  margin-right: 16px;
 }
 
 /* -----------------------------------------------------
@@ -225,8 +226,3 @@ label:focus {
 /* -----------------------------------------------------
  * Custom
  * ----------------------------------------------------- */
-#custom-notification {
-  min-width: 24px;
-  color: #ffffff;
-  margin-left: 2px;
-}
